--- a/BE-TESTE/package.json
+++ b/BE-TESTE/package.json
@@ -56,9 +56,11 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.0",
     "@vinejs/vine": "^3.0.0",
+    "axios": "^1.8.1",
     "luxon": "^3.5.0",
     "mysql2": "^3.12.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "vine": "^0.1.1"
   },
   "hotHook": {
     "boundaries": [
