Update: Add initial informations on Readme

--- a/BE-TESTE/.env.example
+++ b/BE-TESTE/.env.example
@@ -2,10 +2,27 @@ TZ=UTC
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=
+APP_KEY=_occCqdkrHYswk5eiMbKiM0z2_BEJGCA
 NODE_ENV=development
-DB_HOST=127.0.0.1
+
+DB_HOST=database
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=user
+DB_PASSWORD=123456
+DB_DATABASE=payment_system
+DB_CONNECTION=mysql
+
+ADMIN_USERNAME=Admin
+ADMIN_EMAIL=dev@betalent.tech
+ADMIN_PASSWORD=123456
+
+GATEWAY1_URL=http://localhost:3001
+GATEWAY1_LOGIN_EMAIL=dev@betalent.tech
+GATEWAY1_LOGIN_TOKEN=FEC9BB078BF338F464F96B48089EB498
+
+GATEWAY2_URL=http://localhost:3002
+GATEWAY2_AUTH_TOKEN=tk_f2198cc671b5289fa856
+GATEWAY2_AUTH_SECRET=3d15e8ed6131446ea7e3456728b1211f
+
+GATEWAY1_MOCK_URL=http://gateway-1:3001
+GATEWAY2_MOCK_URL=http://gateway-2:3002
