update: Update ADMIN_PASSWORD variable

--- a/BE-TESTE/.env.example
+++ b/BE-TESTE/.env.example
@@ -14,7 +14,7 @@ DB_CONNECTION=mysql
 
 ADMIN_USERNAME=Admin
 ADMIN_EMAIL=dev@betalent.tech
-ADMIN_PASSWORD=123456
+ADMIN_PASSWORD=12345678
 
 GATEWAY1_URL=http://localhost:3001
 GATEWAY1_LOGIN_EMAIL=dev@betalent.tech
