--- a/BE-TESTE/docker-compose.yml
+++ b/BE-TESTE/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - '3333:3333'
     environment:
